--- a/portfolio.html
+++ b/portfolio.html
@@ -4,52 +4,76 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Document</title>
   </head>
   <body>
     <!--Header section-->
     <header class="header">
-      <nav class="header-nav">
-        <a class="header-link link" href="./index.html">
-           web
-          <span class="logo-text">Studio</span></a>
-        <ul class="header-list list">
-          <li class="header-item item"><a href="./index.html" class="link">Studio</a></li>
-          <li class="header-item item"><a href="./portfolio.html" class="link">Portfolio</a></li>
-          <li class="header-item item"><a href="" class="link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="contact">
-        <ul class="contact-list list">
-          <li class="contact-mail"><a href="mailto:info@devstudio.com" class="address-link link"> info@devstudio.com </a></li>
-          <li class="contact-tel"><a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="cont">
+        <nav class="header-nav">
+          <a class="header-link link" href="./index.html">
+            web
+            <span class="logo-text">Studio</span></a
+          >
+          <ul class="header-list list">
+            <li class="header-item item">
+              <a href="./index.html" class="link">Studio</a>
+            </li>
+            <li class="header-item item">
+              <a href="./portfolio.html" class="link">Portfolio</a>
+            </li>
+            <li class="header-item item">
+              <a href="" class="link">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contact">
+          <ul class="contact-list list">
+            <li class="contact-mail">
+              <a href="mailto:info@devstudio.com" class="address-link link">
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="contact-tel">
+              <a href="tel:+110001111111" class="address-link link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
       <!--Nav button-->
       <section>
         <h1>
-          <a href="#" hidden>Portfolio</a></h1>
+          <a href="#" hidden>Portfolio</a>
+        </h1>
         <ul class="nav-btn list list">
           <li class="filter-btn">
             <button type="button" class="main-btn btn">All</button>
           </li>
-          <li><button type="button" class="main-btn btn">Web Site</button></li>
+          <li><button type="button" class="main-btn btn">WebSite</button></li>
           <li><button type="button" class="main-btn btn">App</button></li>
           <li><button type="button" class="main-btn btn">Design</button></li>
           <li><button type="button" class="main-btn btn">Marketing</button></li>
         </ul>
         <!--Portfolio-->
-        <ul class="list">
+        <ul class="portfolio-list list">
           <li class="porfolio-item">
             <a href="" class="link">
               <img
@@ -62,7 +86,7 @@
               <p class="row-text">App</p>
             </a>
           </li>
-          <li class="portfolio-item">
+          <li class="porfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/img2.jpg"
@@ -74,7 +98,7 @@
               <p class="row-text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="porfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/img3.jpg"
@@ -86,7 +110,7 @@
               <p class="row-text">App</p>
             </a>
           </li>
-          <li>
+          <li class="porfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/img4.jpg"
@@ -98,7 +122,7 @@
               <p class="row-text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="porfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/img5.jpg"
@@ -110,7 +134,7 @@
               <p class="row-text">Design</p>
             </a>
           </li>
-          <li>
+          <li class="porfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/img6.jpg"
@@ -122,7 +146,7 @@
               <p class="row-text">Marketing</p>
             </a>
           </li>
-          <li>
+          <li class="porfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/img7.jpg"
@@ -134,7 +158,7 @@
               <p class="row-text">Design</p>
             </a>
           </li>
-          <li>
+          <li class="porfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/img8.jpg"
@@ -146,7 +170,7 @@
               <p class="row-text">Web Site</p>
             </a>
           </li>
-          <li>
+          <li class="porfolio-item">
             <a href="" class="link">
               <img
                 src="./images/portfolio/img9.jpg"
@@ -162,15 +186,17 @@
       </section>
     </main>
     <!--Footer-->
-    <footer class="footer">
-      <a href="./index.html" class="header-link footer-link link">
-        web
-        <span class="footer-logo-text">Studio</span>
-      </a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
+    <div class="footer-container">
+      <footer class="footer">
+        <a href="./index.html" class="header-link footer-link link">
+          web
+          <span class="footer-logo-text">Studio</span>
+        </a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </footer>
+    </div>
   </body>
 </html>
