--- a/portfolio.html
+++ b/portfolio.html
@@ -93,6 +93,7 @@
                 alt="payment by terminal"
                 width="360"
                 height="300"
+                class="portfolio-img"
               />
               <h2 class="row-title">Cashless Payment</h2>
               <p class="row-text">Marketing</p>
@@ -105,6 +106,7 @@
                 alt="meditation app"
                 width="360"
                 height="300"
+                class="portfolio-img"
               />
               <h2 class="row-title">Meditation App</h2>
               <p class="row-text">App</p>
@@ -117,6 +119,7 @@
                 alt="taxi app"
                 width="360"
                 height="300"
+                class="portfolio-img"
               />
               <h2 class="row-title">Taxi Service</h2>
               <p class="row-text">Marketing</p>
@@ -129,6 +132,7 @@
                 alt="phone screen"
                 width="360"
                 height="300"
+                class="portfolio-img"
               />
               <h2 class="row-title">Screen Illustrations</h2>
               <p class="row-text">Design</p>
@@ -141,6 +145,7 @@
                 alt="girl in headphones"
                 width="360"
                 height="300"
+                class="portfolio-img"
               />
               <h2 class="row-title">Online Courses</h2>
               <p class="row-text">Marketing</p>
@@ -153,6 +158,7 @@
                 alt=" screenshot"
                 width="360"
                 height="300"
+                class="portfolio-img"
               />
               <h2 class="row-title">Instagram Stories Concept</h2>
               <p class="row-text">Design</p>
@@ -165,6 +171,7 @@
                 alt="vegetables"
                 width="360"
                 height="300"
+                class="portfolio-img"
               />
               <h2 class="row-title">Organic Food</h2>
               <p class="row-text">Web Site</p>
@@ -177,6 +184,7 @@
                 alt="cup of coffee"
                 width="360"
                 height="300"
+                class="portfolio-img"
               />
               <h2 class="row-title">Fresh Coffee</h2>
               <p class="row-text">Web Site</p>
