--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <!--Header section-->
     <header class="header">
-      <div class="cont">
+      <div class="cont container">
         <nav class="header-nav">
           <a class="header-link link" href="./index.html">
             web
@@ -55,8 +55,9 @@
       </div>
     </header>
     <main>
-      <!-- hero section -->
+      <!-- hero section -->  
       <section class="hero-section">
+        <div class="hero-cont container">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button type="button" class="button btn">
           <span class="button-text">Order Service</span>
@@ -95,7 +96,8 @@
             </p>
           </li>
         </ul>
-      </section>
+      </div>
+      </section> 
       <!-- About as   -->
       <section class="about-section">
         <h2 class="about-title">what are we doing</h2>
