--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
   <body>
     <!--Header section-->
     <header class="header">
-      <div class="cont">
+      <div class="cont container">
         <nav class="header-nav">
           <a class="header-link link" href="./index.html">
             web
