--- a/index.html
+++ b/index.html
@@ -55,85 +55,89 @@
       </div>
     </header>
     <main>
-      <!-- hero section -->  
+      <!-- hero section -->
       <section class="hero-section">
         <div class="hero-cont container">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="button btn">
-          <span class="button-text">Order Service</span>
-        </button>
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="button btn">
+            <span class="button-text">Order Service</span>
+          </button>
         </div>
       </section>
       <!-- main section -->
       <section class="desc-section">
-        <h2 class="desc"><a href="#" hidden>Desc</a></h2>
-        <ul class="desc-list list">
-          <li class="desc-item">
-            <h3 class="desc-title">strategy</h3>
-            <p class="desc-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="desc-item">
-            <h3 class="desc-title">punctuality</h3>
-            <p class="desc-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="desc-item">
-            <h3 class="desc-title">Diligence</h3>
-            <p class="desc-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="desc-item">
-            <h3 class="desc-title">Technologies</h3>
-            <p class="desc-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-  
-      </section> 
+        <div class="desc-container container">
+          <h2 class="desc"><a href="#" hidden>Desc</a></h2>
+          <ul class="desc-list list">
+            <li class="desc-item">
+              <h3 class="desc-title">strategy</h3>
+              <p class="desc-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="desc-item">
+              <h3 class="desc-title">punctuality</h3>
+              <p class="desc-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="desc-item">
+              <h3 class="desc-title">Diligence</h3>
+              <p class="desc-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="desc-item">
+              <h3 class="desc-title">Technologies</h3>
+              <p class="desc-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
       <!-- About as   -->
       <section class="about-section">
-        <h2 class="about-title">what are we doing</h2>
-        <ul class="about-list list">
-          <li class="about-item">
-            <img
-              src="./images/aboutas/img1.jpg"
-              alt="pc"
-              width="360"
-              height="300"
-              class="about-img"
-            />
-          </li>
-          <li class="about-item">
-            <img
-              src="./images/aboutas/img2.jpg"
-              alt="app"
-              width="360"
-              height="300"
-              class="about-img"
-            />
-          </li>
-          <li class="about-item">
-            <img
-              src="./images/aboutas/img3.jpg"
-              alt="phone"
-              width="360"
-              height="300"
-              class="about-img"
-            />
-          </li>
-        </ul>
+        <div class="about-cont container">
+          <h2 class="about-title">what are we doing</h2>
+          <ul class="about-list list">
+            <li class="about-item">
+              <img
+                src="./images/aboutas/img1.jpg"
+                alt="pc"
+                width="360"
+                height="300"
+                class="about-img"
+              />
+            </li>
+            <li class="about-item">
+              <img
+                src="./images/aboutas/img2.jpg"
+                alt="app"
+                width="360"
+                height="300"
+                class="about-img"
+              />
+            </li>
+            <li class="about-item">
+              <img
+                src="./images/aboutas/img3.jpg"
+                alt="phone"
+                width="360"
+                height="300"
+                class="about-img"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <!--Our team-->
       <section class="team-section">
+        <div class="team-cont container"></div>
         <h2 class="section-title title">Our Team</h2>
         <ul class="team-list list">
           <li class="team-item">
@@ -192,8 +196,8 @@
       </section>
     </main>
     <!--Footer-->
-    <div class="footer-container">
-      <footer class="footer">
+    <footer class="footer">
+      <div class="footer-container container">
         <a href="./index.html" class="header-link footer-link link">
           web
           <span class="footer-logo-text">Studio</span>
@@ -202,7 +206,7 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
