--- a/portfolio.html
+++ b/portfolio.html
@@ -59,143 +59,165 @@
     </header>
     <main>
       <!--Nav button-->
-      <section>
-        <h1>
-          <a href="#" hidden>Portfolio</a>
-        </h1>
-        <ul class="nav-btn list list">
-          <li class="filter-btn">
-            <button type="button" class="main-btn btn">All</button>
-          </li>
-          <li><button type="button" class="main-btn btn">WebSite</button></li>
-          <li><button type="button" class="main-btn btn">App</button></li>
-          <li><button type="button" class="main-btn btn">Design</button></li>
-          <li><button type="button" class="main-btn btn">Marketing</button></li>
-        </ul>
-        <!--Portfolio-->
-        <ul class="portfolio-list list">
-          <li class="porfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/img1.jpg"
-                alt="bank app"
-                width="360"
-                height="300"
-              />
-              <h2 class="row-title">Banking App Interface Concept</h2>
-              <p class="row-text">App</p>
-            </a>
-          </li>
-          <li class="porfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/img2.jpg"
-                alt="payment by terminal"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-              <h2 class="row-title">Cashless Payment</h2>
-              <p class="row-text">Marketing</p>
-            </a>
-          </li>
-          <li class="porfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/img3.jpg"
-                alt="meditation app"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-              <h2 class="row-title">Meditation App</h2>
-              <p class="row-text">App</p>
-            </a>
-          </li>
-          <li class="porfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/img4.jpg"
-                alt="taxi app"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-              <h2 class="row-title">Taxi Service</h2>
-              <p class="row-text">Marketing</p>
-            </a>
-          </li>
-          <li class="porfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/img5.jpg"
-                alt="phone screen"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-              <h2 class="row-title">Screen Illustrations</h2>
-              <p class="row-text">Design</p>
-            </a>
-          </li>
-          <li class="porfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/img6.jpg"
-                alt="girl in headphones"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-              <h2 class="row-title">Online Courses</h2>
-              <p class="row-text">Marketing</p>
-            </a>
-          </li>
-          <li class="porfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/img7.jpg"
-                alt=" screenshot"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-              <h2 class="row-title">Instagram Stories Concept</h2>
-              <p class="row-text">Design</p>
-            </a>
-          </li>
-          <li class="porfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/img8.jpg"
-                alt="vegetables"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-              <h2 class="row-title">Organic Food</h2>
-              <p class="row-text">Web Site</p>
-            </a>
-          </li>
-          <li class="porfolio-item">
-            <a href="" class="link">
-              <img
-                src="./images/portfolio/img9.jpg"
-                alt="cup of coffee"
-                width="360"
-                height="300"
-                class="portfolio-img"
-              />
-              <h2 class="row-title">Fresh Coffee</h2>
-              <p class="row-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+      <section class="nav-section">
+        <div class="nav-cont container">
+          <h1>
+            <a href="#" hidden>Portfolio</a>
+          </h1>
+          <ul class="nav-btn-list list">
+            <li class="filter-btn">
+              <button type="button" class="main-btn btn">All</button>
+            </li>
+            <li><button type="button" class="main-btn btn">WebSite</button></li>
+            <li><button type="button" class="main-btn btn">App</button></li>
+            <li><button type="button" class="main-btn btn">Design</button></li>
+            <li>
+              <button type="button" class="main-btn btn">Marketing</button>
+            </li>
+          </ul>
+          <!--Portfolio-->
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/img1.jpg"
+                  alt="bank app"
+                  width="360"
+                  height="300"
+                />
+                <div class="portfolio-card">
+                  <h2 class="row-title">Banking App Interface Concept</h2>
+                  <p class="row-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/img2.jpg"
+                  alt="payment by terminal"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-card">
+                  <h2 class="row-title">Cashless Payment</h2>
+                  <p class="row-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/img3.jpg"
+                  alt="meditation app"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-card">
+                  <h2 class="row-title">Meditation App</h2>
+                  <p class="row-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/img4.jpg"
+                  alt="taxi app"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-card">
+                  <h2 class="row-title">Taxi Service</h2>
+                  <p class="row-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/img5.jpg"
+                  alt="phone screen"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-card">
+                  <h2 class="row-title">Screen Illustrations</h2>
+                  <p class="row-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/img6.jpg"
+                  alt="girl in headphones"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-card">
+                  <h2 class="row-title">Online Courses</h2>
+                  <p class="row-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/img7.jpg"
+                  alt=" screenshot"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-card">
+                  <h2 class="row-title">Instagram Stories Concept</h2>
+                  <p class="row-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/img8.jpg"
+                  alt="vegetables"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-card">
+                  <h2 class="row-title">Organic Food</h2>
+                  <p class="row-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="portfolio-item">
+              <a href="" class="link">
+                <img
+                  src="./images/portfolio/img9.jpg"
+                  alt="cup of coffee"
+                  width="360"
+                  height="300"
+                  class="portfolio-img"
+                />
+                <div class="portfolio-card">
+                  <h2 class="row-title">Fresh Coffee</h2>
+                  <p class="row-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <!--Footer-->
-    <div class="footer-container">
-      <footer class="footer">
+    <footer class="footer">
+      <div class="footer-container container">
         <a href="./index.html" class="header-link footer-link link">
           web
           <span class="footer-logo-text">Studio</span>
@@ -204,7 +226,7 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
