--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </section>
       <!--Our team-->
       <section class="team-section">
-        <div class="team-cont container"></div>
+        <div class="team-cont container">
         <h2 class="section-title title">Our Team</h2>
         <ul class="team-list list">
           <li class="team-item">
@@ -193,6 +193,7 @@
             </div>
           </li>
         </ul>
+      </div>
       </section>
     </main>
     <!--Footer-->
