--- a/portfolio.html
+++ b/portfolio.html
@@ -68,11 +68,11 @@
             <li class="filter-btn">
               <button type="button" class="main-btn btn">All</button>
             </li>
-            <li><button type="button" class="main-btn btn">WebSite</button></li>
-            <li><button type="button" class="main-btn btn">App</button></li>
-            <li><button type="button" class="main-btn btn">Design</button></li>
+            <li><button type="button" class="main-btn other-btn">WebSite</button></li>
+            <li><button type="button" class="main-btn other-btn">App</button></li>
+            <li><button type="button" class="main-btn other-btn">Design</button></li>
             <li>
-              <button type="button" class="main-btn btn">Marketing</button>
+              <button type="button" class="main-btn other-btn">Marketing</button>
             </li>
           </ul>
           <!--Portfolio-->
