--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <!--Footer-->
     <footer class="footer">
       <div class="footer-container container">
-        <a href="./index.html" class="header-link footer-link link">
+        <a href="./index.html" class="footer-link link">
           web
           <span class="footer-logo-text">Studio</span>
         </a>
